# HomeServer

./: .env.example  .gitignore  API_ENDPOINTS.md  API_GUIDE.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_IMPLEMENTATION.md  CLAUDE.md  DOCUMENTATION.md  Dockerfile  GIT_AND_BITWARDEN_PLAN.md  NETWORK_DIAGRAM.md  README.md  SERVER_INVENTORY.md  SUMMARY.md  TESTING_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: project.context.md
alembic/: env.py
src/: __init__.py  config.py  database.py  dependencies.py  init_db.py  main.py
src/api/: __init__.py  auth.py  browser.py  files.py  monitoring.py
src/models/: __init__.py  auth.py  browser.py  db_models.py  files.py  monitoring.py
src/services/: __init__.py
src/services/auth/: __init__.py  service.py
src/services/browser/: __init__.py  service.py
src/services/files/: __init__.py  service.py
src/services/monitoring/: __init__.py  service.py
src/static/: browser.html  dashboard.html  files.html  login.html  register.html
src/utils/: security.py
